--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -7,14 +7,35 @@
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(219, 204, 204)
+    background-color:#fff;
+}
+
+.App{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+
+
+.btn-openModal{
+    background-color:rgb(233, 100, 52);
+    color:#eee;
+    margin:1.2rem 0;
+    padding:.5rem 1.8rem;
+    border:none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 5rem;
+    font-size: 1.2rem;
 }
 
 .modal-wrapper{
-    background-color: #fff;
+    background-color:  rgb(230, 222, 222);
     width: 80%;
     max-width: 800px;
-    margin:4rem auto;
+    margin:5rem;
+    transition: all 1s ease-in-out;
+
 }
 
 .modal-header{
@@ -43,8 +64,9 @@ body{
 
 .modal-body p{
     font-size:1rem;
-    background-color: #eee;
-    color:#333;
+    background-color: #464444;
+    color:#fff;
+    font-size: 1.1rem;
     padding:1rem;
     margin:1rem 0 2rem 0;
 }
@@ -63,3 +85,5 @@ body{
     border-radius: 5rem;
 
 }
+
+
